# bare_msp430g2

./: .gitignore  README.md
msp430/: .gitignore
msp430/apps/blink/: .cproject  CMakeLists.txt  blink.c  blink.dep  firmware  firmware.elf  generic-msp430-gcc.cmake  makefile  msp430g2553.ld
msp430/firmware/: asm.h  blink.out  cpu.c  cpu.dep  cpu.h  firmware.elf  firmware.h  gpio.c  gpio.dep  gpio.h  gpio_asm.S  gpio_asm.Spp  gpio_asm.h  m430g2553.ld  makefile  memorymap.h  msp430g2553.ld  startup.c  startup.d  startup.dep  startup.h  timer.c  timer.dep  timer.h  types.h
